--- a/src/pages/CameraMonitor.css
+++ b/src/pages/CameraMonitor.css
@@ -1,14 +1,14 @@
-.dashboard {
+.camera-monitor {
   display: flex;
   flex-direction: column;
   width: 100%;
   height: 100vh;
 }
 
-.dashboard-content {
+.camera-monitor-content {
   display: flex;
   flex: 1;
-  height: calc(100vh - 15px);
+  height: calc(100vh - 68px);
   justify-content: space-between;
   gap: 10px;
   padding: 5px;
@@ -24,13 +24,14 @@
   transition: width 0.3s ease-in-out;
 }
 
-.dashboard-content.with-panel .main-section {
-  width: 65%;
+.camera-monitor-content.with-panel .main-section {
+  width: 80%;
 }
 
-.dashboard-content.with-panel .violation-log,
-.dashboard-content.with-panel .edit-panel {
-  width: 35%;
+.camera-monitor-content.with-panel .violation-log,
+.camera-monitor-content.with-panel .sidebar {
+  width: 20%;
+  min-width: 300px;
 }
 
 .violation-log.hidden,
